Removed for in labels for some fields

--- a/2-11-2.html
+++ b/2-11-2.html
@@ -37,7 +37,7 @@
           <input type="number" name="23401" id="zip" placeholder="23401" >
         </div>
         <div>
-          <label for="checkbox">What color samples should we send you?</label>
+          <label>What color samples should we send you?</label>
           <p>
             <label for="white"><input type="checkbox" name="white" id="white" disabled>White</label>
             <label for="magenta"><input type="checkbox" name="magenta" id="magenta">Magenta</label>
@@ -47,7 +47,7 @@
           </p>    
           </div>
           <div>
-            <label for="team">How large is your team?</label>
+            <label >How large is your team?</label>
             <p>
               <label for="five"><input type="radio" name="five" id="five">1-5 people</label>
               <label for="ten"><input type="radio" name="ten" id="ten">6-10 people</label>
