--- a/2-11-2.html
+++ b/2-11-2.html
@@ -50,7 +50,7 @@
             <label >How large is your team?</label>
             <p>
               <label for="five"><input type="radio" name="rad" id="five" value="1-5">1-5 people</label>
-              <label for="ten"><input type="radio" name="rad" id="ten" value="6-10">6-10 people</label>
+              <label for="ten"><input type="radio" name="rad" id="ten" value="6-10" checked>6-10 people</label>
               <label for="tenplus"><input type="radio" name="rad" id="tenplus" value="10">10+ people</label>
             </p>
           </div>
