changed input to textarea for my comment box

--- a/2-11-2.html
+++ b/2-11-2.html
@@ -56,8 +56,9 @@
           </div>
           <div>
             <label for="comment">Comments</label>
-            <input type="text" name="comment" id="comment" placeholder="Enter comments here">
+            <textarea name="comment" id="comment" cols="30" rows="10"></textarea>
           </div>
+          div
       </div>
   </form>
 </body>
