Added a checkbox and a Button to the end of my form

--- a/2-11-2.html
+++ b/2-11-2.html
@@ -58,7 +58,10 @@
             <label for="comment">Comments</label>
             <textarea name="comment" id="comment" cols="30" rows="10"></textarea>
           </div>
-          div
+          <div>
+            <label for="sign"><input type="checkbox" name="sign" id="sign"> Sign up for special offers</label>
+            <button type="submit">Place Order</button>
+          </div>
       </div>
   </form>
 </body>
