Added values for form inputs

--- a/2-11-2.html
+++ b/2-11-2.html
@@ -39,11 +39,11 @@
         <div>
           <label>What color samples should we send you?</label>
           <p>
-            <label for="white"><input type="checkbox" name="white" id="white" disabled>White</label>
-            <label for="magenta"><input type="checkbox" name="magenta" id="magenta">Magenta</label>
-            <label for="coral"><input type="checkbox" name="coral" id="coral">Coral</label>
-            <label for="burgundy"><input type="checkbox" name="burgundy" id="burgundy">Burgundy</label>
-            <label for="charcoal"><input type="checkbox" name="charcoal" id="charcoal">Charcoal</label>
+            <label for="white"><input type="checkbox" name="white" id="white" disabled value="White">White</label>
+            <label for="magenta"><input type="checkbox" name="magenta" id="magenta" value="Magenta">Magenta</label>
+            <label for="coral"><input type="checkbox" name="coral" id="coral" value="Coral">Coral</label>
+            <label for="burgundy"><input type="checkbox" name="burgundy" id="burgundy" value="Burgundy">Burgundy</label>
+            <label for="charcoal"><input type="checkbox" name="charcoal" id="charcoal" value="Charcoal">Charcoal</label>
           </p>    
           </div>
           <div>
@@ -60,7 +60,7 @@
           </div>
           <div>
             <label for="sign"><input type="checkbox" name="sign" id="sign"> Sign up for special offers</label>
-            <button type="submit">Place Order</button>
+            <input type="button" value="Place Order">
           </div>
       </div>
   </form>
